Fixed extra space scrolling and added link to GitHub

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,5 +3,5 @@ main {
 }
 
 main .extra-space {
-    height: 100%
+    height: 50em
 }
