--- a/src/css/misc.css
+++ b/src/css/misc.css
@@ -1,5 +1,6 @@
 html, body {
-    background-color: black
+    background-color: black;
+    width: 100%
 }
 
 body {
